2006-09-28  C.J. Collier  <cjcollier@colliertech.org>
	* make.sh
	- cleared up directory changing stuff
	* src/Tao.OpenGl/prebuild.xml
	- commented out examples that don't build due to marshaling errors

2006-09-28T16:20  C.J. Collier  <cjcollier@colliertech.org>
	* make.sh
	- cleaned up some of the repetition
	- fixed a case error

2006-09-28T12:53  C.J. Collier  <cjcollier@colliertech.org>
	* make.sh
	- configure now uses args passed to "./make.sh"

2006-09-28  C.J. Collier  <cjcollier@colliertech.org>
        turned on exec bit for shell scripts, got rid of \r\n newlines


Tao.Ode 0.6.0.0 - July 25, 2006:
	Update to ODE 0.6 and conversion to .NET 2.0 essentially complete.
	The ODE 0.6 release consists of many bug fixes and
	improvements since the 0.5 release.
	There are also many documented and undocumented changes in the API.
	Notable changes: CCylinder renamed to Capsule
			 Support for geom offsets added
	This update also includes a patch from Markus Ewald to fix a bug in
	dGeomSetRotation and inspired related changes.  Thanks Markus.
